syntax = "proto2";
package proto;

option go_package = "./protocol";

service PriceService{
  rpc Send(stream SendRequest) returns (stream SendReply){}
}

//-----------SendTime

message SendRequest{
  required string message = 1;
}

message SendReply{
  required bytes butchOfPrices = 1;
}